--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "chat",
     "bot"
   ],
-  "author": "William Pastor and Matthew Kleiner",
+  "author": "Will Pastor and Matthew Kleiner",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/SudoTree/Discord-Plays-Pokemon/issues"
@@ -27,6 +27,7 @@
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "dotenv": "^6.1.0",
+    "prebuild-install": "^5.2.0",
     "robotjs": "^0.5.1"
   }
 }
