--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,1 +1,28 @@
-{}
+{ "MainConfig": {
+	"ButtonMapping" : {
+		"ButtonCommandAliases" : [
+			"Start",
+			"Select",
+			"MoveUp",
+			"MoveDown",
+			"MoveLeft",
+			"MoveRight",
+			"L",
+			"R",
+			"A",
+			"B"
+		],
+		"ButtonEmulatorKeys" : [
+			"enter",
+			"backspace",
+			"up",
+			"down",
+			"left",
+			"right",
+			"q",
+			"e",
+			"x",
+			"z"
+		]
+	}
+}}
